--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.2",
-    "socket.io-client": "^2.2.0"
+    "redux-saga": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
