--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "redux-saga-test-plan": "^4.0.0-beta.3"
   },
   "scripts": {
     "start": "react-scripts start",
