--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
     "recharts": "^1.6.2",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
+    "redux-saga": "^1.0.2"
+  },
+  "devDependencies": {
+    "react-scripts": "2.1.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.2",
     "redux-saga-test-plan": "^4.0.0-beta.3"
   },
   "scripts": {
