--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
     "redux-saga": "^1.0.2"
   },
   "devDependencies": {
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-security": "^1.4.0",
+    "flow-bin": "^0.104.0",
     "react-scripts": "2.1.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga-test-plan": "^4.0.0-beta.3"
@@ -24,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
