--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-security": "^1.4.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "flow-bin": "^0.104.0",
     "react-scripts": "2.1.5",
     "redux-devtools-extension": "^2.13.8",
