--- a/package.json
+++ b/package.json
@@ -3,39 +3,47 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/recharts": "^1.8.5",
+    "@types/redux-actions": "^2.6.1",
     "axios": "^0.18.0",
-    "connected-react-router": "^6.3.1",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "connected-react-router": "^6.7.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "recharts": "^1.6.2",
-    "redux": "^4.0.1",
+    "recharts": "^1.8.5",
+    "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-flowtype": "^3.4.2",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-security": "^1.4.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "flow-bin": "^0.104.0",
     "react-scripts": "2.1.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga-test-plan": "^4.0.0-beta.3"
+    "redux-saga-test-plan": "^4.0.0-rc.3",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
-    "flow": "flow"
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
